--- a/index.html
+++ b/index.html
@@ -178,6 +178,222 @@
                     <main>
                         <h1 id="einleitung"><a class="header" href="#einleitung">Einleitung</a></h1>
 <p>Hier geht es los!</p>
+<h1 id="organisationsentwicklung"><a class="header" href="#organisationsentwicklung">Organisationsentwicklung</a></h1>
+<h1 id="beteiligte"><a class="header" href="#beteiligte">Beteiligte</a></h1>
+<ul>
+<li>GeschäftsführerIn</li>
+<li>DirektorIn/SchulleiterIn</li>
+<li>LernbegleiterIn</li>
+<li>DozentIn</li>
+<li>Externe/r BetreuerIn</li>
+<li>SchülerIn</li>
+<li>Eltern</li>
+<li>Vereinsmitglied</li>
+<li>Bürge</li>
+<li>Sponsor</li>
+<li>Finanzbehörden</li>
+<li>Landesrechnungshof</li>
+<li>Landesschulbehörde / Kultusministerium</li>
+<li>Presse</li>
+</ul>
+<h1 id="prozesse"><a class="header" href="#prozesse">Prozesse</a></h1>
+<h2 id="lernbezogene-prozesse"><a class="header" href="#lernbezogene-prozesse">Lernbezogene Prozesse</a></h2>
+<p>... </p>
+<h2 id="organisatorische-prozesse"><a class="header" href="#organisatorische-prozesse">Organisatorische Prozesse</a></h2>
+<h3 id="finanzverwaltung"><a class="header" href="#finanzverwaltung">Finanzverwaltung</a></h3>
+<ol>
+<li>
+<p>Kreditorenbuchhaltung</p>
+</li>
+<li>
+<p>Debitorenbuchhaltung</p>
+</li>
+<li>
+<p>Lohnbuchhaltung</p>
+</li>
+</ol>
+<h2 id="an--und-abwesenheit"><a class="header" href="#an--und-abwesenheit">An- und Abwesenheit</a></h2>
+<ul>
+<li>Zeiterfassung für Lernbegleitende</li>
+<li>Anwesenheitserfassung für alle</li>
+</ul>
+<h3 id="verwaltung-außerschulischer-aktivitäten"><a class="header" href="#verwaltung-außerschulischer-aktivitäten">Verwaltung außerschulischer Aktivitäten</a></h3>
+<ul>
+<li>Verträge/Vereinbarungen mit außerschulischen Instanzen schließen
+<ul>
+<li>Praktikumsvertrag</li>
+<li>Aufenthaltszeit</li>
+</ul>
+</li>
+<li>Rückmeldungen über die Schüler entgegegennehmen</li>
+<li>Lerndokumentation des Schülers entgegennehmen</li>
+<li>Organisation von Ausflügen - Erlaubnisse einholen</li>
+</ul>
+<h3 id="krankmeldung-für-personal"><a class="header" href="#krankmeldung-für-personal">Krankmeldung für Personal</a></h3>
+<ul>
+<li>Einreichung der Krankmeldung</li>
+</ul>
+<h3 id="abwesenheitsmeldung-für-schülerinnen"><a class="header" href="#abwesenheitsmeldung-für-schülerinnen">Abwesenheitsmeldung für SchülerInnen</a></h3>
+<ul>
+<li>Ungeplante Abwesenheiten müssen morgens telefonisch oder per Message gemeldet werden</li>
+<li>Eltern müssen die Abwesenheit kurzfristig schriftlich unter Angabe des Grundes (Krankheit, familiäre Gründe, persönliche Gründe) bestätigen</li>
+</ul>
+<h2 id="gesundheit-und-hygiene"><a class="header" href="#gesundheit-und-hygiene">Gesundheit und Hygiene</a></h2>
+<ul>
+<li>
+<p>Meldung von Infektionskrankheiten</p>
+<ul>
+<li>Die Eltern informieren die Schule umgehend, sobald eine Infektionskrankheit gemäß Merkblatt... bekannt wurde.</li>
+<li>Die Schule informiert unmittelbar alle anderen Eltern über gemeldete oder selbst bemerkte Infektionskrankheiten</li>
+</ul>
+</li>
+<li>
+<p>Freigabe von Schülern nach Infektionskrankheit</p>
+<ul>
+<li>Der Schüler muss nach Ende der Infektionskrankheit ein Attest des Arztes vorlegen, bevor er wieder am Unterricht teilnehmen darf.</li>
+</ul>
+</li>
+</ul>
+<h2 id="berichtswesen"><a class="header" href="#berichtswesen">Berichtswesen</a></h2>
+<h3 id="infos-an-eltern"><a class="header" href="#infos-an-eltern">Infos an Eltern</a></h3>
+<ul>
+<li>
+<p>Aktuelle Informationen an Eltern</p>
+<ul>
+<li>Ankündigungen</li>
+<li>Aufforderungen</li>
+<li>Abstimmungen</li>
+<li>Aktualisierungen</li>
+</ul>
+</li>
+<li>
+<p>Dauerhafte Informationen an Eltern</p>
+<ul>
+<li>Information über Abläufe etc.</li>
+</ul>
+</li>
+</ul>
+<h3 id="berichte-an-dritte"><a class="header" href="#berichte-an-dritte">Berichte an Dritte</a></h3>
+<ul>
+<li>Landesschulbehörde
+<ul>
+<li>Meldung über Drittklässler, die nächstes Jahr gehen</li>
+</ul>
+</li>
+</ul>
+<h2 id="it"><a class="header" href="#it">IT</a></h2>
+<ul>
+<li>IT Management</li>
+<li>Datenschutz</li>
+<li>IT-Sicherheit</li>
+<li>Systeme
+<ul>
+<li>Buchhaltungssystem</li>
+<li>Lerndokumentation und Schülerakte</li>
+<li>Personalführungssystem</li>
+<li>Kommunikation mit Eltern</li>
+<li>Anwesenheiten</li>
+</ul>
+</li>
+</ul>
+<h1 id="dokumente"><a class="header" href="#dokumente">Dokumente</a></h1>
+<h2 id="schülerakte"><a class="header" href="#schülerakte">Schülerakte</a></h2>
+<ul>
+<li>Stammdaten
+<ul>
+<li>Schulvertrag</li>
+<li>Stammdaten</li>
+<li>Checkliste für notwendige Kenntnisnahmen (DS, Hygiene, Waffen, Mitfahrerlaubnis)</li>
+<li>Einzugsermächtigung</li>
+<li>Konto</li>
+<li>Besonderheiten und Einschränkungen
+<ul>
+<li>Atteste nach Infektionen</li>
+</ul>
+</li>
+<li>Einwilligungen
+<ul>
+<li>Einwilligungserklärung elektronische Kommunikation</li>
+<li>Fotogenehmigung</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Verlaufsdaten
+<ul>
+<li>Lernverlauf - pädagogische Dokumentation → Kinder: Mappe, Lernbegleiter: Mappe</li>
+<li>Anwesenheiten und Abwesenheiten → zurzeit in der Wochenliste</li>
+<li>Vereinbarungen über außerschulische Lernorte → noch nicht</li>
+</ul>
+</li>
+</ul>
+<h2 id="personalakte"><a class="header" href="#personalakte">Personalakte</a></h2>
+<ul>
+<li>Beschäftigungsverhältnis
+<ul>
+<li>Arbeitsvertrag</li>
+<li>Zusatzvereinbarungen</li>
+<li>Vollmachten</li>
+<li>Abmahnungen</li>
+<li>Kündigungen</li>
+<li>Zeiterfassung</li>
+<li>Krankmeldungen</li>
+</ul>
+</li>
+<li>Bewerbung und Einstellung
+<ul>
+<li>Bewerbungsunterlagen</li>
+<li>Lebenslauf</li>
+<li>Zeugnisse</li>
+<li>Polizeiliches Führungszeugnis</li>
+<li>Gesundheitsbescheinigung?</li>
+</ul>
+</li>
+<li>Sonstige Unterlagen</li>
+<li>Unterlagen zur betrieblichen Altersvorsorge</li>
+<li>Unterlagen zur Sozialversicherung</li>
+<li>Gehaltsabrechnung</li>
+<li>Zeugnisse und Beurteilungen</li>
+</ul>
+<h2 id="expertenliste"><a class="header" href="#expertenliste">Expertenliste</a></h2>
+<ul>
+<li>Name und Stammdaten</li>
+<li>Funktion</li>
+<li>Bereits durchgeführte Aktivitäten</li>
+<li>Verträge und Vereinbarungen</li>
+<li>Bild und Vorstellung</li>
+<li>Einwilligungserklärung zur Vorstellung</li>
+</ul>
+<h2 id="ehrenamtliche"><a class="header" href="#ehrenamtliche">Ehrenamtliche</a></h2>
+<ul>
+<li>Name und Stammdaten</li>
+<li>Funktion</li>
+<li>Anwesenheit</li>
+<li>Nachweis Erweitertes Polizeiliches Führungszeugnis</li>
+<li>Bild und Vorstellung</li>
+<li>Einwilligungserklärung zur Vorstellung</li>
+</ul>
+<h2 id="andere-dritte-anwesende"><a class="header" href="#andere-dritte-anwesende">Andere Dritte Anwesende</a></h2>
+<ul>
+<li>zurzeit Alltagsbegleitung und Schulbegleitung</li>
+<li>Name und Stammdaten</li>
+<li>Funktion</li>
+<li>Anwesenheit
+Nachweis Erweitertes Polizeiliches Führungszeugnis (wenn nicht bereits durch andere Arbeitgeber * sichergestellt)</li>
+<li>Bild und Vorstellung</li>
+<li>Einwilligungserklärung zur Vorstellung</li>
+</ul>
+<h2 id="außerschulische-orte"><a class="header" href="#außerschulische-orte">Außerschulische Orte</a></h2>
+<ul>
+<li>Name und Stammdaten</li>
+<li>Funktion</li>
+<li>Bereits durchgeführte Aktivitäten</li>
+<li>Verträge und Vereinbarungen /Praktikumsvertrag</li>
+</ul>
+<h2 id="weitere-organisatorische-dokumente-von-schule-und-verein"><a class="header" href="#weitere-organisatorische-dokumente-von-schule-und-verein">Weitere organisatorische Dokumente von Schule und Verein</a></h2>
+<ul>
+<li>Ein Zugriffskonzept für Verein, Schulorganisation, Lernbegleiter, Eltern und Schüler muss erstellt werden.</li>
+</ul>
 
                     </main>
 
