deploy: FreieBildung/Organisationsentwicklung@31202a4beb2d63a60ee3f86537a5077bfc9bf60d

--- a/it.html
+++ b/it.html
@@ -177,6 +177,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="it"><a class="header" href="#it">IT</a></h1>
+<p>Einige erste Infos...</p>
 
                     </main>
 
