--- a/print.html
+++ b/print.html
@@ -510,6 +510,7 @@ openFromUrl('./lohnverbuchung.bpmn');
 openFromUrl('./lohnauswertung.bpmn');
 </script>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="it-1"><a class="header" href="#it-1">IT</a></h1>
+<p>Einige erste Infos...</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="prozessbilder"><a class="header" href="#prozessbilder">Prozessbilder</a></h1>
 <p>Da die eingestellten Prozessdiagramme teilweise sehr umfangreich sind, benötigen wir eine Zoom-Funktion. Die einfachste Weise ist, den Camunda Modeler in einer Read-Only-ansicht einzubinden. Im Diagramm kann man dann mit Strg + Mausrad zoomen. </p>
 <p>Leider bringt dies etwas Code-Overhead mit sich, da das Script zum Einbinden sich nicht komplett &quot;verstecken&quot; lässt.</p>
