--- a/print.html
+++ b/print.html
@@ -179,7 +179,6 @@
                     <main>
                         <h1 id="einleitung"><a class="header" href="#einleitung">Einleitung</a></h1>
 <p>Übersicht über die Prozesse einer Schule. Die vom Servicenetzwerk unterstützten Abläufe sind über das Menü links erreichbar.</p>
-<h1 id="organisationsentwicklung"><a class="header" href="#organisationsentwicklung">Organisationsentwicklung</a></h1>
 <h1 id="beteiligte"><a class="header" href="#beteiligte">Beteiligte</a></h1>
 <ul>
 <li>GeschäftsführerIn</li>
@@ -438,6 +437,61 @@ openFromUrl('./lastschriftenausloesung.bpmn');
 openFromUrl('./lastschriftverbuchung.bpmn');
 </script>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="eingliederungshilfe"><a class="header" href="#eingliederungshilfe">Eingliederungshilfe</a></h1>
+<h2 id="beteiligte-1"><a class="header" href="#beteiligte-1">Beteiligte</a></h2>
+<ul>
+<li>Integrationshelferin</li>
+<li>Schulleitung</li>
+<li>Verwaltung</li>
+<li>Buchhaltung</li>
+</ul>
+<h2 id="der-ideale-prozess"><a class="header" href="#der-ideale-prozess">Der ideale Prozess</a></h2>
+<h3 id="ablauf"><a class="header" href="#ablauf">Ablauf</a></h3>
+<ul>
+<li>Zu jedem Monatsanfang stellt die Verwaltung die Abrechnungstabelle für jede Integrationshelferin in ELO bereit.</li>
+<li>Zum Abrechnungsstichtag am Monatsende füllt jede Integrationshelferin die Abrechnungstabelle mit den geleisteten Arbeitsstunden aus. Wenn alle Einträge erfolgt sind, die Integrationshelferin die Tabelle zur Prüfung freigeben.</li>
+<li>Die Schulleitung erhält für jede zur Prüfung freigegebene Tabelle eine Benachrichtigung.</li>
+<li>Die Schulleitung stellt die Korrektheit und Vollständigkeit der Abrechnung fest. 
+<ul>
+<li>Sofern eine Abrechnung Fehler aufweist, geht sie zurück an die betroffene Integrationshelferin zur Klärung bzw. Korrektur. </li>
+</ul>
+</li>
+<li>Die Schulleitung gibt die Abrechnung zur Buchung bis zum Buchungsstichtag frei.</li>
+<li>Die Buchhaltung erstellt für jede zur Buchung freigegebene Abrechnung eine Rechnung an den Kostenträger und versendet diese spätestens am Versandstichtag.</li>
+<li>Die Buchhaltung übermittelt die Ausgangsrechnung an das DATEV-Rechnungswesen. Damit endet der Prozess der Eingliederungshilfe.</li>
+</ul>
+<h3 id="regelungen"><a class="header" href="#regelungen">Regelungen</a></h3>
+<ul>
+<li>Abrechnungsstichtag: der 1. des Folgemonats, ersatzweise der vorangehende letzte Arbeitstag.</li>
+<li>Buchungsstichtag: der 10. des Folgemonats, ersatzweise der vorangehende letzte Arbeitstag.</li>
+<li>Versandstichtag: der 15. des Folgemonats, ersatzweise der vorangehende letzte Arbeitstag.</li>
+<li>Das Servicenetzwerk erstellt Kennzahlen zur Fristeneinhaltung und zur Prozesshistorie.</li>
+<li>Die Buchhaltungsregeln für die Ausgangsrechnungsbuchung.</li>
+</ul>
+<h3 id="voraussetzungen"><a class="header" href="#voraussetzungen">Voraussetzungen</a></h3>
+<ul>
+<li>Kostenträger pro Integrationshelfer bekannt</li>
+<li>Integrationshelfer haben Zugriff auf Erfassungssoftware (ELO oder anderes Formular)</li>
+<li>Die Prozessteilnehmer agieren in einer Rolle und haben jeweils Vertreter, die die Augaben fristgerecht übernehmen können.</li>
+</ul>
+<h3 id="prozessfehler"><a class="header" href="#prozessfehler">Prozessfehler</a></h3>
+<ul>
+<li>Stichtage überschritten: Der Teilnehmer und die Verwaltung erhalten eine Benachrichtigung mit der Bitte um dringende Erledigung.</li>
+<li>Fehlzustellungen an Prozessteilnehmer oder Externe: Nach Rücklauf und Datenkorrektur erneutes Ausführen der fehlerhaften Schritte.</li>
+</ul>
+<h3 id="prozesskennzahlen"><a class="header" href="#prozesskennzahlen">Prozesskennzahlen</a></h3>
+<ul>
+<li>Einhaltungsquote des Abrechnungsstichtags </li>
+<li>Einhaltungsquote des Buchungsstichtags </li>
+<li>Einhaltungsquote des Versandstichtags </li>
+</ul>
+<h3 id="prozessartefakte"><a class="header" href="#prozessartefakte">Prozessartefakte</a></h3>
+<ul>
+<li>Abrechnungstabelle</li>
+<li>Freigabe der Schulleitung</li>
+<li>Rechnungsbeleg für den Kostenträger</li>
+<li>DATEV-Buchungssatz</li>
+</ul>
+<h3 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h3>
 <div class="canvas"><div id="js-canvas"></div></div>
 <script>
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:800 });
@@ -469,7 +523,7 @@ openFromUrl('./belegeingang.bpmn');
 </script>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="belegverbuchung"><a class="header" href="#belegverbuchung">Belegverbuchung</a></h1>
 <p>Das ist ein Text vor dem Diagramm.</p>
-<h2 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h2>
+<h2 id="prozessablauf-1"><a class="header" href="#prozessablauf-1">Prozessablauf</a></h2>
 <div class="canvas"><div id="js-canvas"></div></div>
 <script>
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
@@ -534,7 +588,7 @@ Das ist ein Text nach dem Diagramm.
 <p>ergibt:</p>
 <h1 id="belegeingang-1"><a class="header" href="#belegeingang-1">Belegeingang</a></h1>
 <p>Das ist ein Text vor dem Diagramm.</p>
-<h2 id="prozessablauf-1"><a class="header" href="#prozessablauf-1">Prozessablauf</a></h2>
+<h2 id="prozessablauf-2"><a class="header" href="#prozessablauf-2">Prozessablauf</a></h2>
 <div class="canvas"><div id="js-canvas"></div></div>
 <script>
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
