deploy: FreieBildung/Organisationsentwicklung@4961c2ad7f8b197f16361108fe30aba61b42a8c7

--- a/print.html
+++ b/print.html
@@ -448,8 +448,8 @@ openFromUrl('./lastschriftverbuchung.bpmn');
 <h3 id="ablauf"><a class="header" href="#ablauf">Ablauf</a></h3>
 <ul>
 <li>Zu jedem Monatsanfang stellt die Verwaltung die Abrechnungstabelle für jede Integrationshelferin in ELO bereit.</li>
-<li>Zum Abrechnungsstichtag am Monatsende füllt jede Integrationshelferin die Abrechnungstabelle mit den geleisteten Arbeitsstunden aus. Wenn alle Einträge erfolgt sind, die Integrationshelferin die Tabelle zur Prüfung freigeben.</li>
-<li>Die Schulleitung erhält für jede zur Prüfung freigegebene Tabelle eine Benachrichtigung.</li>
+<li>Zum Abrechnungsstichtag am Monatsende füllt jede Integrationshelferin die Abrechnungstabelle mit den geleisteten Arbeitsstunden aus. Wenn alle Einträge erfolgt sind, muss die Integrationshelferin die Tabelle zur Prüfung übergeben.</li>
+<li>Die Schulleitung erhält für jede zur Prüfung übergegebene Tabelle eine Benachrichtigung.</li>
 <li>Die Schulleitung stellt die Korrektheit und Vollständigkeit der Abrechnung fest. 
 <ul>
 <li>Sofern eine Abrechnung Fehler aufweist, geht sie zurück an die betroffene Integrationshelferin zur Klärung bzw. Korrektur. </li>
