deploy: FreieBildung/Organisationsentwicklung@05386077260693ea94a64fbd469d7a54561ce423

--- a/finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html
+++ b/finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html
@@ -232,6 +232,7 @@
 <li>DATEV-Buchungssatz</li>
 </ul>
 <h3 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h3>
+<style>#js-canvas { background-color: #eeeeee; } </style>
 <div class="canvas"><div id="js-canvas"></div></div>
 <script>
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:800 });
