--- a/print.html
+++ b/print.html
@@ -408,7 +408,7 @@ Nachweis Erweitertes Polizeiliches Führungszeugnis (wenn nicht bereits durch an
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="elternbeitragsverarbeitung"><a class="header" href="#elternbeitragsverarbeitung">Elternbeitragsverarbeitung</a></h1>
 <ul>
-<li><strong><a href="finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html">Stammdaten-Abrechnungs-Zahlungsmethoden-Management</a></strong></li>
+<li><strong><a href="finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html">Stammdaten-Abrechnungs-Management</a></strong></li>
 <li><strong><a href="finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html">Lastschriftenauslösung</a></strong></li>
 <li><strong><a href="finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html">Lastschriftverbuchung</a></strong></li>
 </ul>
@@ -492,6 +492,7 @@ openFromUrl('./lastschriftverbuchung.bpmn');
 <li>DATEV-Buchungssatz</li>
 </ul>
 <h3 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h3>
+<style>#js-canvas { background-color: #eeeeee; } </style>
 <div class="canvas"><div id="js-canvas"></div></div>
 <script>
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:800 });
