--- a/it/prozessunterstuetzung/prozessbilder.html
+++ b/it/prozessunterstuetzung/prozessbilder.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Informationsmanagement</title>
+        <title>Darstellung der Prozessdiagramme</title>
 
 
         <!-- Custom HTML head -->
@@ -14,31 +14,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../favicon.svg">
-        <link rel="shortcut icon" href="../favicon.png">
-        <link rel="stylesheet" href="../css/variables.css">
-        <link rel="stylesheet" href="../css/general.css">
-        <link rel="stylesheet" href="../css/chrome.css">
-        <link rel="stylesheet" href="../css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../css/zoom.css">
+        <link rel="stylesheet" href="../../css/zoom.css">
 
     </head>
     <body class="sidebar-visible no-js">
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../einleitung.html">Einleitung</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung.html"><strong aria-hidden="true">1.</strong> Finanzverwaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">1.1.</strong> Debitorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html"><strong aria-hidden="true">1.1.1.</strong> Elternbeitragsverarbeitung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item expanded "><a href="../finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item expanded "><a href="../finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">1.2.</strong> Kreditorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../finanzverwaltung/kreditorenbuchhaltung/belegeingang.html"><strong aria-hidden="true">1.2.1.</strong> Belegeingang</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item expanded "><a href="../finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">1.3.</strong> Lohnbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item expanded "><a href="../finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../it.html"><strong aria-hidden="true">2.</strong> Information und Kommunikation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../it/prozessunterstuetzung.html"><strong aria-hidden="true">2.1.</strong> Prozessunterstützung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../it/prozessunterstuetzung/prozessbilder.html"><strong aria-hidden="true">2.1.1.</strong> Darstellung der Prozessdiagramme</a></li><li class="chapter-item expanded "><a href="../it/prozessunterstuetzung/weitere-schulprozesse.html"><strong aria-hidden="true">2.1.2.</strong> Weitere Schulprozesse</a></li></ol></li><li class="chapter-item expanded "><a href="../it/informationsmanagement.html" class="active"><strong aria-hidden="true">2.2.</strong> Informationsmanagement</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../it/informationsmanagement/publikation.html"><strong aria-hidden="true">2.2.1.</strong> Publikation</a></li></ol></li></ol></li><li class="chapter-item expanded "><div>Beitragende</div></li><li class="chapter-item expanded affix "><a href="../lizenz.html">Lizenz</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../einleitung.html">Einleitung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung.html"><strong aria-hidden="true">1.</strong> Finanzverwaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung.html"><strong aria-hidden="true">1.1.</strong> Debitorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung.html"><strong aria-hidden="true">1.1.1.</strong> Elternbeitragsverarbeitung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/stammdaten-abrechnungs-management.html"><strong aria-hidden="true">1.1.1.1.</strong> Stammdaten-Abrechnungs-Management</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html"><strong aria-hidden="true">1.1.1.2.</strong> Lastschriftenauslösung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftverbuchung.html"><strong aria-hidden="true">1.1.1.3.</strong> Lastschriftverbuchung</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html"><strong aria-hidden="true">1.1.2.</strong> Eingliederungshilfe</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/debitorenbuchhaltung/mahnwesen.html"><strong aria-hidden="true">1.1.3.</strong> Mahnwesen</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung.html"><strong aria-hidden="true">1.2.</strong> Kreditorenbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.html"><strong aria-hidden="true">1.2.1.</strong> Belegeingang</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html"><strong aria-hidden="true">1.2.2.</strong> Belegverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/kreditorenbuchhaltung/zahlungsverkehr.html"><strong aria-hidden="true">1.2.3.</strong> Zahlungsverkehr</a></li></ol></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung.html"><strong aria-hidden="true">1.3.</strong> Lohnbuchhaltung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnzahlung.html"><strong aria-hidden="true">1.3.1.</strong> Lohnzahlung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html"><strong aria-hidden="true">1.3.2.</strong> Lohnverbuchung</a></li><li class="chapter-item expanded "><a href="../../finanzverwaltung/lohnbuchhaltung/lohnauswertung.html"><strong aria-hidden="true">1.3.3.</strong> Lohnauswertung</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../it.html"><strong aria-hidden="true">2.</strong> Information und Kommunikation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung.html"><strong aria-hidden="true">2.1.</strong> Prozessunterstützung</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung/prozessbilder.html" class="active"><strong aria-hidden="true">2.1.1.</strong> Darstellung der Prozessdiagramme</a></li><li class="chapter-item expanded "><a href="../../it/prozessunterstuetzung/weitere-schulprozesse.html"><strong aria-hidden="true">2.1.2.</strong> Weitere Schulprozesse</a></li></ol></li><li class="chapter-item expanded "><a href="../../it/informationsmanagement.html"><strong aria-hidden="true">2.2.</strong> Informationsmanagement</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../it/informationsmanagement/publikation.html"><strong aria-hidden="true">2.2.1.</strong> Publikation</a></li></ol></li></ol></li><li class="chapter-item expanded "><div>Beitragende</div></li><li class="chapter-item expanded affix "><a href="../../lizenz.html">Lizenz</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -147,7 +147,7 @@
                     <h1 class="menu-title"></h1>
 
                     <div class="right-buttons">
-                        <a href="../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -176,20 +176,50 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="informationsmanagement"><a class="header" href="#informationsmanagement">Informationsmanagement</a></h1>
-<ul>
-<li><strong><a href="informationsmanagement/publikation.html">Publikation</a></strong></li>
-</ul>
+                        <h1 id="darstellung-der-prozessdiagramme"><a class="header" href="#darstellung-der-prozessdiagramme">Darstellung der Prozessdiagramme</a></h1>
+<p>Da die eingestellten Prozessdiagramme teilweise sehr umfangreich sind, benötigen wir eine Zoom-Funktion. Die einfachste Weise ist, den Camunda Modeler in einer Read-Only-ansicht einzubinden. Im Diagramm kann man dann mit Strg + Mausrad zoomen. </p>
+<p>Leider bringt dies etwas Code-Overhead mit sich, da das Script zum Einbinden sich nicht komplett &quot;verstecken&quot; lässt.</p>
+<p>Beispiel für eine Seite mit camunda-Code:</p>
+<pre><code># Belegeingang
+
+Das ist ein Text vor dem Diagramm.
+
+### Prozessablauf
+
+&lt;style&gt;#js-canvas { background-color: #eeeeee; } &lt;/style&gt;
+&lt;div class=&quot;canvas&quot;&gt;&lt;div id=&quot;js-canvas&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+&lt;script&gt;
+    var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
+    function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
+        try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
+    openFromUrl('./belegeingang.bpmn');
+&lt;/script&gt;
+
+Das ist ein Text nach dem Diagramm.
+</code></pre>
+<p>ergibt:</p>
+<h1 id="belegeingang"><a class="header" href="#belegeingang">Belegeingang</a></h1>
+<p>Das ist ein Text vor dem Diagramm.</p>
+<h3 id="prozessablauf"><a class="header" href="#prozessablauf">Prozessablauf</a></h3>
+<style>#js-canvas { background-color: #eeeeee; } </style>
+<div class="canvas"><div id="js-canvas"></div></div>
+<script>
+    var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
+    function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
+        try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
+    openFromUrl('../finanzverwaltung/kreditorenbuchhaltung/belegeingang.bpmn');
+</script>
+<p>Das ist ein Text nach dem Diagramm.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../it/prozessunterstuetzung/weitere-schulprozesse.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../it/prozessunterstuetzung.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../it/informationsmanagement/publikation.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../../it/prozessunterstuetzung/weitere-schulprozesse.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -199,11 +229,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../it/prozessunterstuetzung/weitere-schulprozesse.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../it/prozessunterstuetzung.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../it/informationsmanagement/publikation.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../../it/prozessunterstuetzung/weitere-schulprozesse.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -218,13 +248,13 @@
         </script>
 
 
-        <script src="../elasticlunr.min.js"></script>
-        <script src="../mark.min.js"></script>
-        <script src="../searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="../clipboard.min.js"></script>
-        <script src="../highlight.js"></script>
-        <script src="../book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
 
