deploy: FreieBildung/Organisationsentwicklung@dffb2d6f5f398c9c9b6efc711e67815ef622dff7

--- a/it/informationsmanagement/publikation.html
+++ b/it/informationsmanagement/publikation.html
@@ -207,9 +207,7 @@
 </ul>
 <h3 id="voraussetzungen"><a class="header" href="#voraussetzungen">Voraussetzungen</a></h3>
 <ul>
-<li>Kostenträger pro Integrationshelfer bekannt</li>
-<li>Integrationshelfer haben Zugriff auf Erfassungssoftware (ELO oder anderes Formular)</li>
-<li>Die Prozessteilnehmer agieren in einer Rolle und haben jeweils Vertreter, die die Augaben fristgerecht übernehmen können.</li>
+<li>Prozessteilnehmer haben Zugriff auf das github-Projekt und sind in die Abläufe eingewiesen.</li>
 </ul>
 <h3 id="prozessfehler"><a class="header" href="#prozessfehler">Prozessfehler</a></h3>
 <p>Prozessfehler führen zu einem gescheiterten Workflow oder einem unerwünschten Ergebnis auf der Website.
