--- a/print.html
+++ b/print.html
@@ -673,9 +673,7 @@ Nachweis Erweitertes Polizeiliches Führungszeugnis (wenn nicht bereits durch an
 </ul>
 <h3 id="voraussetzungen-1"><a class="header" href="#voraussetzungen-1">Voraussetzungen</a></h3>
 <ul>
-<li>Kostenträger pro Integrationshelfer bekannt</li>
-<li>Integrationshelfer haben Zugriff auf Erfassungssoftware (ELO oder anderes Formular)</li>
-<li>Die Prozessteilnehmer agieren in einer Rolle und haben jeweils Vertreter, die die Augaben fristgerecht übernehmen können.</li>
+<li>Prozessteilnehmer haben Zugriff auf das github-Projekt und sind in die Abläufe eingewiesen.</li>
 </ul>
 <h3 id="prozessfehler-1"><a class="header" href="#prozessfehler-1">Prozessfehler</a></h3>
 <p>Prozessfehler führen zu einem gescheiterten Workflow oder einem unerwünschten Ergebnis auf der Website.
