deploy: FreieBildung/Organisationsentwicklung@c398ffe813b85a1859fa43bbfdffc8466501dbb5

--- a/finanzverwaltung/lohnbuchhaltung.html
+++ b/finanzverwaltung/lohnbuchhaltung.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Lohnbuchhaltung</title>
+        <title>Lohnbuchhaltung - Servicenetzwerk Freie Bildung</title>
 
 
         <!-- Custom HTML head -->
@@ -14,7 +14,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../favicon.svg">
         <link rel="shortcut icon" href="../favicon.png">
         <link rel="stylesheet" href="../css/variables.css">
         <link rel="stylesheet" href="../css/general.css">
@@ -31,7 +30,6 @@
         <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../css/zoom.css">
 
     </head>
     <body class="sidebar-visible no-js">
@@ -124,42 +122,10 @@
 
             <div class="page">
                 <style>
-                .myheader {
-                    margin-top: 55px;
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: nowrap;
-                    align-items: center;
-                    gap: 10px;
-                }
-                .mylogo {
-                    height: 60px;
-                }
-                .myimage {
-                    max-height: 90%;
-                    width: auto;
-                    object-fit: contain;
-                }
-                .mytitle {
-                    margin-top: -5px;
-                    text: align-center;
-                    font-family: "Open Sans", sans-serif;
-                    font-weight: bold;
-                    font-size: 26px;
+                .menu-title {
                     color: #A35000;
                 }
-                #menu-bar-hover-placeholder {
-                    display:none;
-                }
                 </style>
-                <div class="myheader">
-                    <div class="mylogo">
-                        <img src="/it/assets/logo.png" class="myimage"/>
-                    </div>
-                    <div class="mytitle">
-                        Servicenetzwerk Freie Bildung
-                    </div>
-                </div>
                 <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
@@ -181,7 +147,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">Servicenetzwerk Freie Bildung</h1>
 
                     <div class="right-buttons">
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
