--- a/it/prozessunterstuetzung/prozessbilder.html
+++ b/it/prozessunterstuetzung/prozessbilder.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Darstellung der Prozessdiagramme</title>
+        <title>Darstellung der Prozessdiagramme - Servicenetzwerk Freie Bildung</title>
 
 
         <!-- Custom HTML head -->
@@ -14,7 +14,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../../favicon.svg">
         <link rel="shortcut icon" href="../../favicon.png">
         <link rel="stylesheet" href="../../css/variables.css">
         <link rel="stylesheet" href="../../css/general.css">
@@ -31,7 +30,6 @@
         <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../../css/zoom.css">
 
     </head>
     <body class="sidebar-visible no-js">
@@ -124,42 +122,10 @@
 
             <div class="page">
                 <style>
-                .myheader {
-                    margin-top: 55px;
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: nowrap;
-                    align-items: center;
-                    gap: 10px;
-                }
-                .mylogo {
-                    height: 60px;
-                }
-                .myimage {
-                    max-height: 90%;
-                    width: auto;
-                    object-fit: contain;
-                }
-                .mytitle {
-                    margin-top: -5px;
-                    text: align-center;
-                    font-family: "Open Sans", sans-serif;
-                    font-weight: bold;
-                    font-size: 26px;
+                .menu-title {
                     color: #A35000;
                 }
-                #menu-bar-hover-placeholder {
-                    display:none;
-                }
                 </style>
-                <div class="myheader">
-                    <div class="mylogo">
-                        <img src="/it/assets/logo.png" class="myimage"/>
-                    </div>
-                    <div class="mytitle">
-                        Servicenetzwerk Freie Bildung
-                    </div>
-                </div>
                 <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
@@ -181,7 +147,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">Servicenetzwerk Freie Bildung</h1>
 
                     <div class="right-buttons">
                         <a href="../../print.html" title="Print this book" aria-label="Print this book">
@@ -214,7 +180,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="darstellung-der-prozessdiagramme"><a class="header" href="#darstellung-der-prozessdiagramme">Darstellung der Prozessdiagramme</a></h1>
-<p>Da die eingestellten Prozessdiagramme teilweise sehr umfangreich sind, benötigen wir eine Zoom-Funktion. Die einfachste Weise ist, den Camunda Modeler in einer Read-Only-ansicht einzubinden. Im Diagramm kann man dann mit Strg + Mausrad zoomen. </p>
+<p>Da die eingestellten Prozessdiagramme teilweise sehr umfangreich sind, benötigen wir eine Zoom-Funktion. Die einfachste Weise ist, den Camunda Modeler in einer Read-Only-ansicht einzubinden. Im Diagramm kann man dann mit Strg + Mausrad zoomen oder mit Shift+ Mausrad horizontal scrollen.</p>
 <p>Leider bringt dies etwas Code-Overhead mit sich, da das Script zum Einbinden sich nicht komplett &quot;verstecken&quot; lässt.</p>
 <p>Beispiel für eine Seite mit camunda-Code:</p>
 <pre><code># Belegeingang
@@ -229,7 +195,7 @@ Das ist ein Text vor dem Diagramm.
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
     function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
-    openFromUrl('./belegeingang.bpmn');
+    openFromUrl('belegeingang.bpmn');
 &lt;/script&gt;
 
 Das ist ein Text nach dem Diagramm.
@@ -244,7 +210,7 @@ Das ist ein Text nach dem Diagramm.
     var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:500 });
     function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
-    openFromUrl('../finanzverwaltung/kreditorenbuchhaltung/belegeingang.bpmn');
+    openFromUrl('../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.bpmn');
 </script>
 <p>Das ist ein Text nach dem Diagramm.</p>
 
