--- a/finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html
+++ b/finanzverwaltung/kreditorenbuchhaltung/belegverbuchung.html
@@ -195,8 +195,7 @@
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
 openFromUrl('./belegverbuchung.bpmn');
 </script>
-<p>Das ist ein Text nach dem Diagramm.</p>
-
+<img class="replacement-image" src="belegverbuchung.png"/>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
