--- a/finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html
+++ b/finanzverwaltung/lohnbuchhaltung/lohnverbuchung.html
@@ -195,6 +195,7 @@
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
 openFromUrl('./lohnverbuchung.bpmn');
 </script>
+<img class="replacement-image" src="lohnverbuchung.png"/>
 
                     </main>
 
