--- a/it/prozessunterstuetzung/prozessbilder.html
+++ b/it/prozessunterstuetzung/prozessbilder.html
@@ -218,6 +218,7 @@ Das ist ein Text nach dem Diagramm.
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
     openFromUrl('../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.bpmn');
 </script>
+<img class="replacement-image" src="../../finanzverwaltung/kreditorenbuchhaltung/belegeingang.bpmn"/>
 <p>Das ist ein Text nach dem Diagramm.</p>
 
                     </main>
