--- a/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html
+++ b/finanzverwaltung/debitorenbuchhaltung/elternbeitragsverarbeitung/lastschriftenausloesung.html
@@ -195,7 +195,7 @@
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
 openFromUrl('./lastschriftenausloesung.bpmn');
 </script>
-
+<img class="replacement-image" src="lastschriftenausloesung.png"/>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
