--- a/finanzverwaltung/lohnbuchhaltung/lohnzahlung.html
+++ b/finanzverwaltung/lohnbuchhaltung/lohnzahlung.html
@@ -195,6 +195,7 @@
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
 openFromUrl('./lohnzahlung.bpmn');
 </script>
+<img class="replacement-image" src="lohnzahlung.png"/>
 
                     </main>
 
