--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="prozesshandbuch-servicenetzerk"><a class="header" href="#prozesshandbuch-servicenetzerk">Prozesshandbuch Servicenetzerk</a></h1>
+                        <img class="replacement-image" src="it/assets/titel.png"/>
+<h1 id="prozesshandbuch-servicenetzwerk"><a class="header" href="#prozesshandbuch-servicenetzwerk">Prozesshandbuch Servicenetzwerk</a></h1>
 <p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor. Momentan liegt der Fokus auf den Buchhaltungsprozessen, die für die teilnehmenden Schulen essenziell sind.</p>
-<p>Weitere Prozesse werden folgen, u.a.</p>
+<p>Weitere Prozesse in Planung:</p>
 <h2 id="servicenetzwerk"><a class="header" href="#servicenetzwerk">Servicenetzwerk</a></h2>
 <ul>
 <li>Aufnahme einer weiteren Schule</li>
@@ -199,6 +200,11 @@
 <ul>
 <li>Automatisierung von Abläufen</li>
 <li>Sicherheitsprozesse</li>
+</ul>
+<h2 id="schulen"><a class="header" href="#schulen">Schulen</a></h2>
+<ul>
+<li>Kommunikationsprozesse</li>
+<li>Regulatorische Prozesse</li>
 </ul>
 
                     </main>
