deploy: FreieBildung/Organisationsentwicklung@65bf966f422fdbfc27824f3fcf48a9f4b7b0cf14

--- a/print.html
+++ b/print.html
@@ -755,7 +755,8 @@ footer-template = &quot;&lt;p style='font-size:10px; margin-left: 48%'&gt;&lt;sp
 </code></pre>
 <p>Das PDF liegt nach erfolgreicher Erzeugung in <code>book/pdf/output.pdf</code>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="lizenz"><a class="header" href="#lizenz">Lizenz</a></h1>
-<p>Quelle: <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.de">creativecommons.org</a></p>
+<p><strong><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.de">CC BY-SA 4.0</a></strong> Namensnennung - Weitergabe unter gleichen Bedingungen 4.0 International </p>
+<p>Quelle der Übersicht: <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.de">creativecommons.org</a></p>
 <h2 id="sie-dürfen"><a class="header" href="#sie-dürfen">Sie dürfen</a></h2>
 <ul>
 <li><strong>Teilen</strong> — das Material in jedwedem Format oder Medium vervielfältigen und weiterverbreiten und zwar für beliebige Zwecke, sogar kommerziell.</li>
