deploy: FreieBildung/Organisationsentwicklung@a98c6f8d3735c50444b8c0e15c55629f18a42a26

--- a/einleitung.html
+++ b/einleitung.html
@@ -206,6 +206,7 @@
 <li>Kommunikationsprozesse</li>
 <li>Regulatorische Prozesse</li>
 </ul>
+<p><img src="gliederung.png" alt="Gliederung der Services" /></p>
 
                     </main>
 
