--- a/print.html
+++ b/print.html
@@ -207,6 +207,7 @@
 <li>Kommunikationsprozesse</li>
 <li>Regulatorische Prozesse</li>
 </ul>
+<p><img src="gliederung.png" alt="Gliederung der Services" /></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="finanzverwaltung"><a class="header" href="#finanzverwaltung">Finanzverwaltung</a></h1>
 <ul>
 <li><strong><a href="finanzverwaltung/debitorenbuchhaltung.html">Debitorenbuchhaltung</a></strong></li>
