--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 <li>Kommunikationsprozesse</li>
 <li>Regulatorische Prozesse</li>
 </ul>
+<p><img src="gliederung.png" alt="Gliederung der Services" /></p>
 
                     </main>
 
