deploy: FreieBildung/Organisationsentwicklung@e10b20835e2bef84f1e7d6763e5c015c23be0d46

--- a/print.html
+++ b/print.html
@@ -188,7 +188,9 @@
                     <main>
                         <img class="replacement-image" src="it/assets/titel.png"/>
 <h1 id="prozesshandbuch-servicenetzwerk"><a class="header" href="#prozesshandbuch-servicenetzwerk">Prozesshandbuch Servicenetzwerk</a></h1>
-<p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor. Momentan liegt der Fokus auf den Buchhaltungsprozessen, die für die teilnehmenden Schulen essenziell sind.</p>
+<p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor. </p>
+<p><img src="gliederung.png" alt="Gliederung der Services" /></p>
+<p>Momentan liegt der Fokus auf den Buchhaltungsprozessen, die für die teilnehmenden Schulen essenziell sind.</p>
 <p>Weitere Prozesse in Planung:</p>
 <h2 id="servicenetzwerk"><a class="header" href="#servicenetzwerk">Servicenetzwerk</a></h2>
 <ul>
@@ -207,7 +209,6 @@
 <li>Kommunikationsprozesse</li>
 <li>Regulatorische Prozesse</li>
 </ul>
-<p><img src="gliederung.png" alt="Gliederung der Services" /></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="finanzverwaltung"><a class="header" href="#finanzverwaltung">Finanzverwaltung</a></h1>
 <ul>
 <li><strong><a href="finanzverwaltung/debitorenbuchhaltung.html">Debitorenbuchhaltung</a></strong></li>
