--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
                     <main>
                         <img class="replacement-image" src="it/assets/titel.png"/>
 <h1 id="prozesshandbuch-servicenetzwerk"><a class="header" href="#prozesshandbuch-servicenetzwerk">Prozesshandbuch Servicenetzwerk</a></h1>
-<p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor. Momentan liegt der Fokus auf den Buchhaltungsprozessen, die für die teilnehmenden Schulen essenziell sind.</p>
+<p>Dieses ebook stellt die vom Servicenetzwerk unterstützten Abläufe vor. </p>
+<p><img src="gliederung.png" alt="Gliederung der Services" /></p>
+<p>Momentan liegt der Fokus auf den Buchhaltungsprozessen, die für die teilnehmenden Schulen essenziell sind.</p>
 <p>Weitere Prozesse in Planung:</p>
 <h2 id="servicenetzwerk"><a class="header" href="#servicenetzwerk">Servicenetzwerk</a></h2>
 <ul>
@@ -206,7 +208,6 @@
 <li>Kommunikationsprozesse</li>
 <li>Regulatorische Prozesse</li>
 </ul>
-<p><img src="gliederung.png" alt="Gliederung der Services" /></p>
 
                     </main>
 
