deploy: FreieBildung/Organisationsentwicklung@68122314ded7f6235acac8a8f5fd04cb85eb32ff

--- a/finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html
+++ b/finanzverwaltung/debitorenbuchhaltung/eingliederungshilfe.html
@@ -251,8 +251,7 @@
 <style>#js-canvas { background-color: #eeeeee; } </style>
 <div class="canvas"><div id="js-canvas"></div></div>
 <script>
-    var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:800, additionalModules: [
-    { moveCanvas: [ 'value', null ] } ] });
+    var modeler = new BpmnJS({container: $('#js-canvas'), width:'100%',height:800 });
     function openFromUrl(url) { $.ajax(url, { dataType : 'text' }).done(async function(xml) {
         try { await modeler.importXML(xml); modeler.get('canvas').zoom('fit-viewport'); } catch (err) { console.error(err); }});}
 openFromUrl('./eingliederungshilfe.bpmn');
